Se agrego programas basicos de una pagina html

--- a/basic.html
+++ b/basic.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="HTML" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
     <body>
@@ -44,5 +44,6 @@
             <svg width="400" height="100">
                 <rect width="400" height="100" style="fill:rgb(0,0,255);stroke-width:10;stroke:rgb(0,0,0)" />
             </svg>
+            <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
     </body>       
 </html>
