--- a/basic.html
+++ b/basic.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="HTML" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>HTML</title>
     </head>
     <body>
         <h1>APRENDIENDO HTML.5</h1>
