se modifico el archivo

--- a/css.html
+++ b/css.html
@@ -1,4 +1,13 @@
-<p style="color:red;">A red paragraph.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS</title>
+</head>
+<body>
+    <p style="color:red;">A red paragraph.</p>
 <!DOCTYPE html>
 <html>
 <head>
@@ -33,6 +42,8 @@ p    {color: red;}
     
     </body>
     </html>
-    p {
-        border: 2px solid powderblue;
-    }
+
+    <link rel="stylesheet" href="https://www.w3schools.com/html/styles.css">
+
+</body>
+</html>
