se modifico el archivo

--- a/favicón.html
+++ b/favicón.html
@@ -4,28 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>elemento</title>
+    <title>Favicón</title>
 </head>
 <body>
     <!DOCTYPE html>
 <html>
+<head>
+    <title>My Page Title</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+</head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
-
-<html>
-<body>
-
-<p>This is a paragraph
-<p>This is a paragraph
-
-</body>
-</html>
-<p>This is a <br> paragraph with a line break.</p>
 
 </body>
 </html>
